examples/type_system/failing/50_invalid_main_signature_no_root_discharge_noise.flx
// E412 only: invalid main signature should suppress root-discharge noise (no E406 cascade).

effect Console {
    print: String -> ()
}

fn main() -> Int with Console {
    perform Console.print("hi")
    1
}
